Changes
=======

3.0 (unreleased)
----------------

- `unzip=true` default behavior in buildout.cfg.

- Added 'daemon' part to the newly created buildout.cfg.


2.1 (2010-10-26)
----------------

- **NOTE: As a result of these changes, ``grokproject`` will no longer
  support building projects based on Grok versions earlier than 1.2!**

- Removed the ``--grokversion`` and ``--grok-release-url`` commandline
  options, in favor of the ``-version-url`` option. This URL should point to a
  buildout ``*.cfg`` file containing version "pins" for all the packages
  involved. The default URL is still looked up by way of
  http://grok.zope.org/releaseinfo/current.

- The newly created project will use the test layer and test browser from
  ``zope.app.wsgi.testlayer``.

- Delegate bootstrapping a newly created project to the project's
  ``bootstrap.py`` and the project's ``bin/buildout``. This isolates the
  bootstrapping from grokproject itself and prevents potential zc.buildout
  version conflicts.

- Update to use z3c.recipe.scripts instead of zc.recipe.egg as part of the
  upgrade to zc.buildout-1.5.2.

2.0.1 (2010-05-30)
------------------

- Make sure the otherwise empty log and extends-cache directories exist.

2.0 (2010-05-30)
----------------

* Use a pipeline for setting up the application.

* Add logger ``grok`` in ``debug.ini`` and ``deploy.ini``
  templates. This logger logs warning messages emitted by more recent
  versions of grokcore.view template registry (and has no effect
  with older grok versions).

  By default warning messages are displayed in ``debug.ini`` and
  disabled in ``deploy.ini``.

  To change settings, edit section ``[logger_grok]`` in
  ``etc/debug.ini.in`` and ``etc/deploy.ini.in`` respectively and
  rerun buildout afterwards.

* Use a new "version information" layout on http://grok.zope.org/releaseinfo.

  More specifically, the "bundlemaker" or "eggbasket" feature is no longer
  used. Instead, grokproject expexts to find a